--- a/templates/home.html
+++ b/templates/home.html
@@ -15,11 +15,28 @@
 
     </div>
     <div>
-        <form action="home" method="post">
+        <form action="home" method="post" enctype="multipart/form-data">
             <input type="text" name="username" placeholder="姓名"/>
             <input type="text" name="mail" placeholder="邮箱"/>
             <input type="text" name="gender" placeholder="性别"/>
-            <input type="submit" value="添加"/>
+            <div>
+                1<input type="checkbox" name="gender1" value="1" />
+                2<input type="checkbox" name="gender1" value="2"/>
+                3<input type="checkbox" name="gender1" value="3"/>
+            </div>
+            <div>
+                <select name="city">
+                    <option value="gz">广州</option>
+                    <option value="sh">上海</option>
+                    <option value="bj">北京</option>
+                </select>
+            </div>
+            <div>
+                <input type="file" name="fafa">
+            </div>
+            <div>
+                <input type="submit" value="添加"/>
+            </div>
         </form>
     </div>
     <div>
@@ -34,6 +51,8 @@
                 <td>{{ row.username }}</td>
                 <td>{{ row.mail }}</td>
                 <td>{{ row.gender }}</td>
+                <td>{{ row.g_list }}</td>
+                <td>{{ row.city }}</td>
             </tr>
             {% endfor %}
         </table>
