修改了config文件

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,14 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>首页</title>
 </head>
 <body>
-    <ul>
-        {% for k,v in user_dict.items %}
-            <li><a href="detail-{{ k }}.html">{{ v.name }}</a></li>
-        {% endfor %}
-    </ul>
-<script src="/static/js/jquery-1.12.4.min.js"></script>
+    <div>index</div>
+    <script src="/static/js/jquery-1.12.4.min.js"></script>
 </body>
 </html>
