修改了config文件

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
     <title>首页</title>
 </head>
 <body>
-    <div>index</div>
+    <div>{{ username }}</div>
     <script src="/static/js/jquery-1.12.4.min.js"></script>
 </body>
 </html>
